--- a/src/app/layout/footer/footer.component.html
+++ b/src/app/layout/footer/footer.component.html
@@ -1,1 +1,12 @@
-<p>footer works!</p>
+<footer>
+    <div class="animation" #graph (window:resize)="onResizeGraph($event)">
+        <svg version="1.1" xmlns="http://www.w3.org/2000/svg" [attr.viewBox]="viewBox" width="100%" height="100%">
+            <g>
+                <rect x="10" y="10" width="50" height="50"/>
+            </g>
+        </svg>
+    </div>
+    <div class="content">
+        <div class="content-message">{{'Page made by Andrés González'}}</div>
+    </div>
+</footer>
